# backend-golang/api/docs/swagger.yaml
@@ -64,6 +64,30 @@ definitions:
 info:
   contact: {}
 paths:
+  /distributor/offers:
+    get:
+      consumes:
+      - application/json
+      description: Get offers associated to a distributor from the database by passing
+        an ID
+      parameters:
+      - description: Distributor ID
+        in: query
+        name: distributorId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.Response'
+      summary: Get offers made by a distributor
   /distributor/requests:
     get:
       description: Get all requests which are stored in the database and expect offers
